ZahraGhahremani/Wetland_project/#2: Added fill-in the water bodies and join-up waterways functions and modify the Filter notebook.

--- a/Filter/Filter.ipynb
+++ b/Filter/Filter.ipynb
@@ -12,6 +12,8 @@
     "from post_proc import _resample as rsam\n",
     "from post_proc import _reclass as rc\n",
     "from post_proc import _add_meta as addm\n",
+    "from post_proc import _extend_water as extdw\n",
+    "from post_proc import _water_body as wtrb\n",
     "\n",
     "# import libraries\n",
     "import boto3\n",
@@ -136,6 +138,12 @@
     "    ## Make geometry\n",
     "    mask_geometry = box(*clipped_bounds)\n",
     "    mask_geometry_gpd = gpd.GeoDataFrame( geometry= [mask_geometry])\n",
+    "    \n",
+    "    # Join up the waterways\n",
+    "    final_array = extdw.joinWtr(clipped_array)\n",
+    "    \n",
+    "    # Fill in lakes with holes\n",
+    "    seg_array = wtrb.waterBody(final_array)\n",
     "    \n",
     "    # Crop and resample\n",
     "    \n",
