ZahraGhahremani/Wetland_project/#4: Updated file names in paths.

--- a/Filter/Filter.ipynb
+++ b/Filter/Filter.ipynb
@@ -147,12 +147,12 @@
     "    \n",
     "    # Crop and resample\n",
     "    \n",
-    "    # LCMAP mask\n",
+    "    # LCMAP mask (urban mask)\n",
     "    LCMAP_crop = mc.cropMask('/mnt/c/Lynker/Beaver_project/LCMAP/new_gdal_lcmap.tif', mask_geometry_gpd, clipped_meta)  \n",
     "    LCMAP_resam = rsam.resampleRaster(LCMAP_crop, clipped_src)  \n",
     "    \n",
-    "    # CDL mask\n",
-    "    cdl_crop = mc.cropMask('/mnt/c/Lynker/Beaver_project/CDL_CropSpace/Downloaded_images/new_gdal_reproject_cdl.tif', mask_geometry_gpd, clipped_meta)\n",
+    "    # Agg mask\n",
+    "    cdl_crop = mc.cropMask('/mnt/c/Lynker/Beaver_project/Downloaded_images/agg_final.tif', mask_geometry_gpd, clipped_meta)\n",
     "    cdl_resam = rsam.resampleRaster(cdl_crop, clipped_src)   \n",
     "    del LCMAP_crop, cdl_crop\n",
     "    \n",
